Fix image was blocking the top button on mobile

--- a/melewi/main.less
+++ b/melewi/main.less
@@ -119,6 +119,7 @@
     position: relative;
     height: 100%;
     z-index: 1;
+    pointer-events: none;
     // margin: 0 0 0px -100px;
     img:last-child {
         // position: relative;
